Make times relative to sent-message time
* Use "earlier" and "later" syntax at all times
* Store the dose message time as part of the dose

For reminders, we store their time inherently in the reminder - either
fetch it from the reminder message when using the inline button, or
attach it to the URL for the "Take..." URL-button. This avoids storing
notification

Fixes https://github.com/lutzky/trufotbot/issues/26
